test_suite5/ALAN/test_suite/alan-2022-examples/failing/008120_mutation.alan
source w function call() begin relax end begin relax end
